Update speaker details and schedule for FYP Event 2025; remove header section and add footer content

--- a/index.html
+++ b/index.html
@@ -964,9 +964,6 @@
     <div class="cosmic-orb"></div>
     <div class="cosmic-orb"></div>
 
-    <!-- Header -->
-    
-
     <!-- Hero Section -->
     <section id="hero" class="hero">
         <div class="container">
@@ -1051,9 +1048,9 @@
                     </div>
 
                     <div class="speaker-card glass-card">
-                        <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Jorge%20Alvarez%20(Manager%20of%20Corporate%20%26%20Strategic%20Partnerships_%20Active%20Minds,%20Inc).jfif');"></div>
-                        <h4 class="speaker-name">JORGE ALVAREZ</h4>
-                        <p class="speaker-title">Manager of Corporate & Strategic Partnerships, Active Minds, Inc</p>
+                        <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Anpotowin%20Jensen.jpg');"></div>
+                        <h4 class="speaker-name">ANPOTOWIN JENSEN</h4>
+                        <p class="speaker-title">Youth Advocate & Community Organizer</p>
                         <p class="speaker-bio">UN Science Summit Panelist</p>
                     </div>
                 </div>
@@ -1089,6 +1086,27 @@
                         <p class="speaker-title">Founder & Executive Director, Youth Power Project</p>
                         <p class="speaker-bio">Policy & Advocacy Breakout Session</p>
                     </div>
+
+                    <div class="speaker-card glass-card">
+                        <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Mercy%20Mkandawire.jpg');"></div>
+                        <h4 class="speaker-name">MERCY MKANDAWIRE</h4>
+                        <p class="speaker-title">Youth Mental Health Advocate</p>
+                        <p class="speaker-bio">Social Support Breakout Session</p>
+                    </div>
+
+                    <div class="speaker-card glass-card">
+                        <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Ross%20Layton.jpg');"></div>
+                        <h4 class="speaker-name">ROSS LAYTON</h4>
+                        <p class="speaker-title">Mental Health Equity Advocate</p>
+                        <p class="speaker-bio">Mental Health Equity Breakout Session</p>
+                    </div>
+
+                    <div class="speaker-card glass-card">
+                        <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Dr%20Sean%20Thum.jpg');"></div>
+                        <h4 class="speaker-name">DR. SEAN THUM</h4>
+                        <p class="speaker-title">Digital Mental Health Specialist</p>
+                        <p class="speaker-bio">Mental Health Equity Breakout Session</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1118,7 +1136,7 @@
                 <div class="schedule-item glass-card">
                     <div class="schedule-time">10:35 AM - 11:20 AM</div>
                     <h3 class="schedule-title">UN Science Summit Panel</h3>
-                    <p class="schedule-description">Community and Mental Health: Reimagining Meaningful Youth Engagement for Global Wellbeing<br><em>Panelists: Judah Njoroge, Benny Prawira Siauw, Isaac Lara, Jorge Alvarez</em></p>
+                    <p class="schedule-description">Community and Mental Health: Reimagining Meaningful Youth Engagement for Global Wellbeing<br><em>Panelists: Judah Njoroge, Benny Prawira Siauw, Isaac Lara, Anpotowin Jensen | Moderator: Arc Telos Saint Amour</em></p>
                 </div>
 
                 <div class="schedule-item glass-card">
@@ -1155,7 +1173,7 @@
                     <div class="breakout-image" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Breakout%20Session/Breakout%20Session%201A.png');"></div>
                     <div class="breakout-content">
                         <h3 class="breakout-title">Breaking Barriers and Promoting Youth Mental Health Equity</h3>
-                        <p class="breakout-moderator">Moderator: Alyna Lim</p>
+                        <p class="breakout-moderator">Moderator: Alyna Lim | Panelists: Nze Okoronta, Ross Layton, Dr. Sean Thum</p>
                         <p class="breakout-description">Dismantling obstacles and forging pathways to ensure every youth has an equitable chance to thrive mentally and emotionally.</p>
                     </div>
                 </div>
@@ -1164,7 +1182,7 @@
                     <div class="breakout-image" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Breakout%20Session/Breakout%20Session%201B.png');"></div>
                     <div class="breakout-content">
                         <h3 class="breakout-title">The Power of Connection: Fostering Social Support for Youth Wellbeing</h3>
-                        <p class="breakout-moderator">Moderator: Glen Koh</p>
+                        <p class="breakout-moderator">Moderator: Glen Koh | Panelists: Marx Wang, Kate Barranco, Mercy Mkandawire</p>
                         <p class="breakout-description">Exploring how to cultivate environments where meaningful relationships flourish and provide crucial safety nets.</p>
                     </div>
                 </div>
@@ -1173,7 +1191,7 @@
                     <div class="breakout-image" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Breakout%20Session/Breakout%20Session%201C.png');"></div>
                     <div class="breakout-content">
                         <h3 class="breakout-title">Policy, Action, and Youth Mental Health</h3>
-                        <p class="breakout-moderator">Moderator: Joanna Fang</p>
+                        <p class="breakout-moderator">Moderator: Ronit Chakraborty | Panelists: Saanvi Arora, Connor Dalgaard, Emmy Egulu</p>
                         <p class="breakout-description">Why grassroots advocacy matters for our global future and how local voices shape effective policies.</p>
                     </div>
                 </div>
@@ -1271,13 +1289,24 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <h3>Join the Movement</h3>
+                <p>Be part of the generation that goes beyond awareness to take meaningful action for youth mental health.</p>
+                <p>&copy; 2025 ForYouPage.Org. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
     <!-- JavaScript -->
     <script>
         // Enhanced scroll to section function
         function scrollToSection(sectionId) {
             const element = document.getElementById(sectionId);
             if (element) {
-                const headerHeight = document.querySelector('.header').offsetHeight;
+                const headerHeight = document.querySelector('.header') ? document.querySelector('.header').offsetHeight : 0;
                 const elementPosition = element.offsetTop - headerHeight - 20;
                 
                 window.scrollTo({
@@ -1322,13 +1351,15 @@
 
             // Handle logo click to scroll to top
             const logo = document.querySelector('.logo');
-            logo.addEventListener('click', function(e) {
-                e.preventDefault();
-                window.scrollTo({
-                    top: 0,
-                    behavior: 'smooth'
+            if (logo) {
+                logo.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    window.scrollTo({
+                        top: 0,
+                        behavior: 'smooth'
+                    });
                 });
-            });
+            }
         });
 
         // Intersection Observer for scroll animations
