Update speaker and partner images to use direct URLs; adjust background styles for better display.

--- a/index.html
+++ b/index.html
@@ -753,7 +753,8 @@
             width: 100%;
             height: 200px;
             background: var(--cosmic-dark);
-            background-size: cover;
+            background-size: contain;
+            background-repeat: no-repeat;
             background-position: center;
             position: relative;
         }
@@ -1199,7 +1200,7 @@
             <!-- Keynote Speaker -->
             <div class="speakers-grid">
                 <div class="speaker-card keynote-speaker glass-card" 
-                     onclick="openModal('judah-njoroge', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Judah%20Njoroge%20(Keynote%20Speaker)%20(Youth%20Programmes%20Lead%20-%20East%20Africa,%20The%20Resilience%20Project).jpg', 'JUDAH NJOROGE', 'Keynote Speaker | Youth Programmes Lead - East Africa, The Resilience Project', 'Judah Njoroge will deliver our keynote address on \"Community and Mental Health: Reimagining Meaningful Youth Engagement for Global Wellbeing.\" As the Youth Programmes Lead for East Africa at The Resilience Project, Judah brings extensive experience in youth mental health advocacy and community-based approaches to wellbeing.')">
+                     onclick="openModal('judah-njoroge', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Judah%20Njoroge%20(Keynote%20Speaker)%20(Youth%20Programmes%20Lead%20-%20East%20Africa,%20The%20Resilience%20Project).jpg', 'JUDAH NJOROGE', 'Keynote Speaker | Youth Programmes Lead - East Africa, The Resilience Project', 'Judah Njoroge will deliver our keynote address on Community and Mental Health: Reimagining Meaningful Youth Engagement for Global Wellbeing. As the Youth Programmes Lead for East Africa at The Resilience Project, Judah brings extensive experience in youth mental health advocacy and community-based approaches to wellbeing.')">
                     <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Judah%20Njoroge%20(Keynote%20Speaker)%20(Youth%20Programmes%20Lead%20-%20East%20Africa,%20The%20Resilience%20Project).jpg');"></div>
                     <h3 class="speaker-name">JUDAH NJOROGE</h3>
                     <p class="speaker-title">Keynote Speaker | Youth Programmes Lead - East Africa, The Resilience Project</p>
@@ -1275,15 +1276,15 @@
                 </div>
 
                 <div class="speaker-card glass-card" 
-                     onclick="openModal('emmy-egulu', '2025 Speakers Photos and Titles /EMMY EGULU.jpeg', 'EMMY EGULU', 'Public Policy Analyst, CSA Group', 'Emmy Egulu is a Public Policy Analyst at CSA Group. She contributes to the Policy & Advocacy breakout session, bringing expertise in policy analysis and development to advance youth mental health at the systemic level.')">
-                    <div class="speaker-avatar" style="background-image: url('2025 Speakers Photos and Titles /EMMY EGULU.jpeg');"></div>
+                     onclick="openModal('emmy-egulu', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/EMMY%20EGULU.jpeg', 'EMMY EGULU', 'Public Policy Analyst, CSA Group', 'Emmy Egulu is a Public Policy Analyst at CSA Group. She contributes to the Policy & Advocacy breakout session, bringing expertise in policy analysis and development to advance youth mental health at the systemic level.')">
+                    <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/EMMY%20EGULU.jpeg');"></div>
                     <h4 class="speaker-name">EMMY EGULU</h4>
                     <p class="speaker-title">Public Policy Analyst, CSA Group</p>
                     <p class="speaker-bio">Policy & Advocacy Breakout Session</p>
                 </div>
 
                 <div class="speaker-card glass-card" 
-                     onclick="openModal('mercy-mkandawire', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Mercy%20Mkandawire%20(Executive%20Director,%20iMind%20Malawi).png', 'MERCY MKANDAWIRE', 'Executive Director, iMind Malawi', 'Mercy Mkandawire is the Executive Director of iMind Malawi. She contributes to the Social Support breakout session, bringing perspectives on community-based mental health support and youth empowerment from her work in Malawi with the mission of \"Healthy Mind, Healthy Body.\"')">
+                     onclick="openModal('mercy-mkandawire', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Mercy%20Mkandawire%20(Executive%20Director,%20iMind%20Malawi).png', 'MERCY MKANDAWIRE', 'Executive Director, iMind Malawi', 'Mercy Mkandawire is the Executive Director of iMind Malawi. She contributes to the Social Support breakout session, bringing perspectives on community-based mental health support and youth empowerment from her work in Malawi with the mission of Healthy Mind, Healthy Body.')">
                     <div class="speaker-avatar" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/2025%20Speakers%20Photos%20and%20Titles%20/Mercy%20Mkandawire%20(Executive%20Director,%20iMind%20Malawi).png');"></div>
                     <h4 class="speaker-name">MERCY MKANDAWIRE</h4>
                     <p class="speaker-title">Executive Director, iMind Malawi</p>
@@ -1462,8 +1463,8 @@
 
             <div class="breakout-grid">
                 <div class="breakout-card glass-card" 
-                     onclick="openModal('youth-move-session', 'Partners/Youth Move National (Partner).png', 'Youth Move National Session', 'Facilitated by: Youth Move National', 'Youth-driven mental health advocacy session focusing on organizing strategies and systemic change. Youth Move National champions youth-driven mental health advocacy across the United States, sharing their expertise in youth organizing and advocacy strategies for systemic change in mental health policy.')">
-                    <div class="breakout-image" style="background-image: url('Partners/Youth Move National (Partner).png');"></div>
+                     onclick="openModal('youth-move-session', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png', 'Youth Move National Session', 'Facilitated by: Youth Move National', 'Youth-driven mental health advocacy session focusing on organizing strategies and systemic change. Youth Move National champions youth-driven mental health advocacy across the United States, sharing their expertise in youth organizing and advocacy strategies for systemic change in mental health policy.')">
+                    <div class="breakout-image" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png'); background-size: contain;"></div>
                     <div class="breakout-content">
                         <h3 class="breakout-title">Youth Move National Session</h3>
                         <p class="breakout-moderator">Facilitated by: Youth Move National</p>
@@ -1472,8 +1473,8 @@
                 </div>
 
                 <div class="breakout-card glass-card" 
-                     onclick="openModal('youth-power-session', 'Partners/Youth Power Project (Partner).avif', 'Youth Power Project Session', 'Facilitated by: Youth Power Project', 'Empowering youth through advocacy and leadership development with practical organizing skills. Youth Power Project is dedicated to empowering youth through advocacy and leadership development, bringing expertise in youth-led organizing and building youth advocacy capacity.')">
-                    <div class="breakout-image" style="background-image: url('Partners/Youth Power Project (Partner).avif');"></div>
+                     onclick="openModal('youth-power-session', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif', 'Youth Power Project Session', 'Facilitated by: Youth Power Project', 'Empowering youth through advocacy and leadership development with practical organizing skills. Youth Power Project is dedicated to empowering youth through advocacy and leadership development, bringing expertise in youth-led organizing and building youth advocacy capacity.')">
+                    <div class="breakout-image" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif'); background-size: contain;"></div>
                     <div class="breakout-content">
                         <h3 class="breakout-title">Youth Power Project Session</h3>
                         <p class="breakout-moderator">Facilitated by: Youth Power Project</p>
@@ -1601,7 +1602,8 @@
     </section>
 
     <!-- Partners Section -->
-    <section id="partners" class="section" style="padding-bottom: var(--space-lg);">\n        <div class="container">
+    <section id="partners" class="section" style="padding-bottom: var(--space-lg);">
+        <div class="container">
             <div class="section-header">
                 <h2 class="section-title">OUR PARTNERS</h2>
                 <p class="section-subtitle">Working together to amplify youth voices in mental health</p>
@@ -1609,8 +1611,8 @@
 
             <div class="partners-grid">
                 <div class="partner-card glass-card" 
-                     onclick="openModal('youth-power-project', 'Partners/Youth Power Project (Partner).avif', 'YOUTH POWER PROJECT', 'Partner Organization', 'Youth Power Project is dedicated to empowering youth through advocacy and leadership development. As a key partner of FYP Event 2025, they bring expertise in youth-led organizing and will be facilitating one of the Partner-Led Sessions during the summit, focusing on building youth advocacy capacity.')">
-                    <div class="partner-logo" style="background-image: url('Partners/Youth Power Project (Partner).avif');"></div>
+                     onclick="openModal('youth-power-project', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif', 'YOUTH POWER PROJECT', 'Partner Organization', 'Youth Power Project is dedicated to empowering youth through advocacy and leadership development. As a key partner of FYP Event 2025, they bring expertise in youth-led organizing and will be facilitating one of the Partner-Led Sessions during the summit, focusing on building youth advocacy capacity.')">
+                    <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif'); background-size: contain;"></div>
                     <h4 class="partner-name">YOUTH POWER PROJECT</h4>
                     <p class="breakout-description">Empowering youth through advocacy and leadership development</p>
                 </div>
@@ -1631,8 +1633,8 @@
                 </div>
 
                 <div class="partner-card glass-card" 
-                     onclick="openModal('youth-move-national', 'Partners/Youth Move National (Partner).png', 'YOUTH MOVE NATIONAL', 'Partner Organization', 'Youth Move National champions youth-driven mental health advocacy across the United States. As a key partner, they will be facilitating one of the Partner-Led Sessions during the summit, sharing their expertise in youth organizing and advocacy strategies for systemic change in mental health policy.')">
-                    <div class="partner-logo" style="background-image: url('Partners/Youth Move National (Partner).png');"></div>
+                     onclick="openModal('youth-move-national', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png', 'YOUTH MOVE NATIONAL', 'Partner Organization', 'Youth Move National champions youth-driven mental health advocacy across the United States. As a key partner, they will be facilitating one of the Partner-Led Sessions during the summit, sharing their expertise in youth organizing and advocacy strategies for systemic change in mental health policy.')">
+                    <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png'); background-size: contain;"></div>
                     <h4 class="partner-name">YOUTH MOVE NATIONAL</h4>
                     <p class="breakout-description">Youth-driven mental health advocacy</p>
                 </div>
