Update session details and replace Channel Kindness with Letters to Strangers
- Updated the description of the Partner-Led Sessions to reflect the change from Channel Kindness to Letters to Strangers.
- Modified the breakout card to feature Letters to Strangers, including updated session title, facilitator information, and description.
- Changed the background image for the Letters to Strangers session.

--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@
                 <div class="schedule-item glass-card" style="cursor: pointer;" onclick="scrollToSection('partner-led-sessions')">
                     <div class="schedule-time">12:35 PM - 1:25 PM</div>
                     <h3 class="schedule-title">Partner-Led Sessions</h3>
-                    <p class="schedule-description">Concurrent sessions led by Youth Move National, Youth Power Project, and Channel Kindness (Born This Way Foundation)<br><em>Click to see session details below</em></p>
+                    <p class="schedule-description">Concurrent sessions led by Youth Move National, Youth Power Project, and Letters to Strangers<br><em>Click to see session details below</em></p>
                 </div>
 
                 <div class="schedule-item glass-card">
@@ -1483,13 +1483,12 @@
                 </div>
 
                 <div class="breakout-card glass-card" 
-                     onclick="openModal('channel-kindness-session', 'https://via.placeholder.com/400x200/ff0099/ffffff?text=Channel+Kindness', 'Channel Kindness Session', 'Facilitated by: Channel Kindness; Born This Way Foundation', 'Promoting kindness and mental wellness through community building and positive action initiatives. Channel Kindness, Born This Way Foundation focuses on supporting the wellness of young people and empowering them to create a kinder and braver world through their Channel Kindness platform.')">
-                    <div class="breakout-image" style="background: linear-gradient(135deg, var(--neon-pink), var(--cosmic-pink)); display: flex; align-items: center; justify-content: center; color: white; font-family: var(--font-display); font-weight: 600; text-align: center; padding: var(--space-md);">
-                        <span>Channel Kindness</span>
+                     onclick="openModal('letters-to-strangers-session', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/LetterstoStrangers_logo_R.avif', 'Letters to Strangers Session', 'Facilitated by: Letters to Strangers', 'Promoting kindness and mental wellness through community building and positive action initiatives. Letters to Strangers focuses on supporting the wellness of young people and empowering them to create a kinder and braver world through their platform.')">
+                    <div class="breakout-image" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/LetterstoStrangers_logo_R.avif'); background-size: contain; background-repeat: no-repeat; background-position: center;">
                     </div>
                     <div class="breakout-content">
-                        <h3 class="breakout-title">Channel Kindness Session</h3>
-                        <p class="breakout-moderator">Facilitated by: Channel Kindness; Born This Way Foundation</p>
+                        <h3 class="breakout-title">Letters to Strangers Session</h3>
+                        <p class="breakout-moderator">Facilitated by: Letters to Strangers</p>
                         <p class="breakout-description">Promoting kindness and mental wellness through community building and positive action initiatives.</p>
                     </div>
                 </div>
