Enhance hero section with floating partner logos and animations; update partner descriptions and modal functionality for improved user engagement.

--- a/index.html
+++ b/index.html
@@ -1610,14 +1610,21 @@
 
             <div class="partners-grid">
                 <div class="partner-card glass-card" 
-                     onclick="openModal('youth-power-project', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif', 'YOUTH POWER PROJECT', 'Partner Organization', 'Youth Power Project is dedicated to empowering youth through advocacy and leadership development. As a key partner of FYP Event 2025, they bring expertise in youth-led organizing and will be facilitating one of the Partner-Led Sessions during the summit, focusing on building youth advocacy capacity.')">
+                     onclick="openModal('youth-power-project', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif', 'YOUTH POWER PROJECT', 'Partner Organization', 'As young people, we\'re often told we\'ve opened Pandora\'s box by questioning existing systems. But unlike the myth, we see this as a good thing - because at the bottom of that box lies hope. By empowering youth to challenge harmful practices and imagine better alternatives, we\'re not just releasing problems into the light - we\'re creating confidence in institutions by shaping the institutions that we want to see. Most youth don\'t know they can talk to a lawmaker or walk into the State Capitol, provide feedback to companies designing products for them, or that their lived experiences are exactly the expertise policymakers need. We create opportunities for youth to directly touch democracy, to see their experiences reflected in the law. That can be life changing.')">
                     <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Power%20Project%20(Partner).avif'); background-size: contain;"></div>
                     <h4 class="partner-name">YOUTH POWER PROJECT</h4>
                     <p class="breakout-description">Empowering youth through advocacy and leadership development</p>
                 </div>
 
                 <div class="partner-card glass-card" 
-                     onclick="openModal('imind-malawi', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Partner%202.png', 'iMIND MALAWI', 'Partner Organization', 'iMind Malawi operates with the mission Healthy Mind, Healthy Body and focuses on mental health advocacy and support in Malawi. As a partner organization, they bring valuable perspectives on community-based mental health approaches from the African continent to our global summit.')"
+                     onclick="openModal('letters-to-strangers-partner', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/LetterstoStrangers_logo_R.avif', 'LETTERS TO STRANGERS', 'Partner Organization', 'We want mental health made personal, because each person deserves to be treated as the individual they are. No one\'s identity should be buried beneath statistics. Indeed: often there is nothing greater than a person-to-person human connection.')">
+                    <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/LetterstoStrangers_logo_R.avif'); background-size: contain;"></div>
+                    <h4 class="partner-name">LETTERS TO STRANGERS</h4>
+                    <p class="breakout-description">Making mental health personal through human connection</p>
+                </div>
+
+                <div class="partner-card glass-card" 
+                     onclick="openModal('imind-malawi', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Partner%202.png', 'iMIND MALAWI', 'Partner Organization', 'iMind is a youth-led organisation that is driving towards mental wellness, it was founded in 2017 by university students. It is registered as a company limited by guarantee with the Registrar General, the Council for Non-governmental Organisations in Malawi (CONGOMA) and the NGO Regulatory Authority (NGO/L/24/038). It is contributing towards the realization of the United Nations\' Sustainable Development Goal 3 which is good health and well-being.')"
                      style="cursor: pointer;">
                     <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Partner%202.png');"></div>
                     <h4 class="partner-name">iMIND MALAWI</h4>
@@ -1625,17 +1632,17 @@
                 </div>
 
                 <div class="partner-card glass-card" 
-                     onclick="openModal('mentally-resilient-youth', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Partner%203.png', 'MENTALLY RESILIENT YOUTH NETWORK', 'Partner Organization', 'Mentally Resilient Youth Network is committed to building resilience in young people worldwide. As a summit partner, they contribute expertise in resilience-building programs and peer support networks, helping to create sustainable mental health support systems for youth globally.')">
+                     onclick="openModal('mentally-resilient-youth', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Partner%203.png', 'MENTALLY RESILIENT YOUTH NETWORK', 'Partner Organization', 'We Champion Mental Wellness for the Next Generation. At the Mentally Resilient Youth Network, we envision a world where every young person thrives emotionally, mentally, and socially. Through education, support, and advocacy, we empower youth to take charge of their mental wellbeing and build a culture of resilience.')">
                     <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Partner%203.png');"></div>
                     <h4 class="partner-name">MENTALLY RESILIENT YOUTH NETWORK</h4>
-                    <p class="breakout-description">Building resilience in young people worldwide</p>
+                    <p class="breakout-description">Championing mental wellness for the next generation</p>
                 </div>
 
                 <div class="partner-card glass-card" 
-                     onclick="openModal('youth-move-national', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png', 'YOUTH MOVE NATIONAL', 'Partner Organization', 'Youth Move National champions youth-driven mental health advocacy across the United States. As a key partner, they will be facilitating one of the Partner-Led Sessions during the summit, sharing their expertise in youth organizing and advocacy strategies for systemic change in mental health policy.')">
+                     onclick="openModal('youth-move-national', 'https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png', 'YOUTH MOVE NATIONAL', 'Partner Organization', 'Youth MOVE (Motivating Others through Voices of Experience) National (YMN) has been connecting, supporting, and developing youth leadership in advocacy to create positive system change for over 20 years. We envision a future in which young people are valued as empowered leaders, advocates, and designers of communities that are built for all youth to thrive. We do this through policy change and system reform work, national trainings and accreditation programs, peer support, and working directly with youth across the nation to address their specific communities needs through our 40+ Chapter Network (and growing) who often do direct services. We practice authentic youth engagement through youth driven decision making by elevating youth voices of lived and living experience while being entirely youth led and driven (our Board is mandated to be 60% youth including our Board President).')">
                     <div class="partner-logo" style="background-image: url('https://raw.githubusercontent.com/joannafg/FYP2025EventProfilePictures/main/Partners/Youth%20Move%20National%20(Partner).png'); background-size: contain;"></div>
                     <h4 class="partner-name">YOUTH MOVE NATIONAL</h4>
-                    <p class="breakout-description">Youth-driven mental health advocacy</p>
+                    <p class="breakout-description">Youth-driven mental health advocacy for over 20 years</p>
                 </div>
             </div>
         </div>
